--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
             </button>
-        </div>
+        </div><!--carousel-->
     </section><!--banner-main-->
 
     <section class="apresentacao">
@@ -91,7 +91,6 @@
     <section class="diferenciais">
         <h2>Porque somos diferentes...</h2>
         <div class="container flex">
-            
             <div class="diferenciais-box">
                 <div class="difereciais-box-circle">
                     <img src="./img/qualificados.png" alt="">
